--- a/Notebook/algerian-analysis.ipynb
+++ b/Notebook/algerian-analysis.ipynb
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
      "text": [
       "Input Data:\n",
       "   day  month  Temperature    RH    Ws  Rain  FFMC  DMC   DC  ISI  BUI\n",
-      "0    3      7         56.0  12.0  23.0   2.0   2.5  6.8  3.9  2.8  5.8\n",
+      "0    3      6         67.0  12.0  23.0   2.3   2.6  4.6  7.8  5.7  6.9\n",
       "The predicted fire condition is: Not Fire\n"
      ]
     },
@@ -951,6 +951,7 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "import joblib\n",
     "\n",
     "def predict_fire(day, month, Temperature,RH, Ws, Rain, FFMC, DMC, DC, ISI, BUI):\n",
     "    # Create a DataFrame with the input features\n",
@@ -971,6 +972,12 @@
     "    # Print the input data for verification\n",
     "    print(\"Input Data:\")\n",
     "    print(input_data)\n",
+    " \n",
+    "    # Load the trained scaler used during training\n",
+    "    loaded_scaler = joblib.load('scaler.pkl')  # Load the scaler used during training\n",
+    "\n",
+    "    #Load the trained model\n",
+    "    loaded_model = joblib.load('best_ridge_model.pkl')  # Replace with your actual model\n",
     "\n",
     "    # Scale the input data\n",
     "    scaled_input = loaded_scaler.transform(input_data)\n",
@@ -999,7 +1006,8 @@
     "\n",
     "# Prediction\n",
     "fire_prediction = predict_fire(day, month, Temperature,RH, Ws, Rain, FFMC, DMC, DC, ISI, BUI)\n",
-    "print(f\"The predicted fire condition is: {fire_prediction}\")"
+    "print(f\"The predicted fire condition is: {fire_prediction}\")\n",
+    "\n"
    ]
   }
  ],
