--- a/Notebook/algerian-analysis.ipynb
+++ b/Notebook/algerian-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "[243 rows x 15 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,17 +421,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
     "#dropping column region and year\n",
-    "f = df.drop(columns=['Region', 'year'])\n"
+    "df = df.drop(columns=['Region', 'year'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -935,8 +935,8 @@
      "output_type": "stream",
      "text": [
       "Input Data:\n",
-      "   day  month  Temperature    RH    Ws  Rain  FFMC  DMC   DC  ISI  BUI\n",
-      "0    3      6         67.0  12.0  23.0   2.3   2.6  4.6  7.8  5.7  6.9\n",
+      "   day  month  Temperature    RH   Ws  Rain  FFMC  DMC   DC   ISI  BUI\n",
+      "0    3      6         78.0  34.0  6.7   5.8   5.6  6.9  5.4  34.0  1.2\n",
       "The predicted fire condition is: Not Fire\n"
      ]
     },
@@ -1008,6 +1008,15 @@
     "fire_prediction = predict_fire(day, month, Temperature,RH, Ws, Rain, FFMC, DMC, DC, ISI, BUI)\n",
     "print(f\"The predicted fire condition is: {fire_prediction}\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Git Hub Link \n",
+    "\n",
+    "https://github.com/aishwaryakarki001/Algerian-Forest-Fire-Analysis"
    ]
   }
  ],
